// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getHomepage: getHomepage Complete Annotation Page 1`] = `
Object {
  "format": "text/html",
  "id": "https://example.org/info/book1/",
  "label": Object {
    "en": Array [
      "Home page for Book 1",
    ],
  },
  "type": "Text",
}
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getHomepageId: getHomepageId Complete Annotation Page 1`] = `"https://example.org/info/book1/"`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getLogo: getLogo Complete Annotation Page 1`] = `
Array [
  Object {
    "id": "https://example.org/logos/institution1.jpg",
    "service": Array [
      "https://example.org/service/inst1",
    ],
    "type": "Image",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getLogoIds: getLogoIds Complete Annotation Page 1`] = `
Array [
  "https://example.org/logos/institution1.jpg",
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getPartOf: getPartOf Complete Annotation Page 1`] = `
Array [
  Object {
    "id": "https://example.org/collections/books/",
    "type": "Collection",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getPartOfId: getPartOfId Complete Annotation Page 1`] = `
Array [
  Object {
    "id": "https://example.org/collections/books/",
    "schema": "collection",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getRendering: getRendering Complete Annotation Page 1`] = `
Array [
  Object {
    "format": "application/pdf",
    "id": "https://example.org/iiif/book1.pdf",
    "label": Object {
      "en": Array [
        "Download as PDF",
      ],
    },
    "type": "Text",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getRenderingIds: getRenderingIds Complete Annotation Page 1`] = `
Array [
  "https://example.org/iiif/book1.pdf",
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getSeeAlso: getSeeAlso Complete Annotation Page 1`] = `
Array [
  Object {
    "format": "text/xml",
    "id": "https://example.org/library/catalog/book1.xml",
    "profile": "https://example.org/profiles/bibliographic",
    "type": "Dataset",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getSeeAlsoIds: getSeeAlsoIds Complete Annotation Page 1`] = `
Array [
  "https://example.org/library/catalog/book1.xml",
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getService: getService Complete Annotation Page 1`] = `
Array [
  Object {
    "id": "https://example.org/service/example",
    "profile": "https://example.org/docs/example-service.html",
    "type": "Service",
  },
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Complete Annotation Page getServiceIds: getServiceIds Complete Annotation Page 1`] = `
Array [
  "https://example.org/service/example",
]
`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getHomepage: getHomepage Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getHomepageId: getHomepageId Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getLogo: getLogo Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getLogoIds: getLogoIds Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getPartOf: getPartOf Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getPartOfId: getPartOfId Minimal Annotation Page 1`] = `null`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getRendering: getRendering Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getRenderingIds: getRenderingIds Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getSeeAlso: getSeeAlso Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getSeeAlsoIds: getSeeAlsoIds Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getService: getService Minimal Annotation Page 1`] = `Array []`;

exports[`api/3.x/annotation-page/technical AnnotationPage: Minimal Annotation Page getServiceIds: getServiceIds Minimal Annotation Page 1`] = `Array []`;
